<resources>
    <string name="app_name">Gerenciador Financeiro</string>
    <string name="action_settings">Configurações</string>

    <string name="t2_text_hint_name">Nome</string>
    <string name="t2_text_hint_valor">Valor</string>
    <string name="t2_text_hint_vencimento">Venc: DD/MM/YYYY</string>
    <string name="t2_text_tv_tipo">Tipo</string>
    <string-array name="tipo_de_divida_array">
        <item>Moradia</item>
        <item>Alimentaçao</item>
        <item>Outros</item>
    </string-array>
    <string name="t2_text_tv_status">Status</string>
    <string name="t2_text_rb_pago">Pago</string>
    <string name="t2_text_rb_nao_pago">Não Pago</string>
    <string name="t2_text_btn_salvar">Salvar</string>
    <string name="t2_text_btn_cancelar">Cancelar</string>
</resources>
