<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.esy.laerte.gerenciadorfinanceiro.Tela2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/t2_tr_nome">

            <TextView
                android:background="@mipmap/ic_create_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/t2_text_hint_name"
                android:ems="10"
                android:id="@+id/t2_et_nome" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:id="@+id/t2_tr_valor">

            <TextView
                android:background="@mipmap/ic_attach_money_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="@string/t2_text_hint_valor"
                android:id="@+id/t2_et_valor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:background="@mipmap/ic_insert_invitation_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/t2_text_hint_vencimento"
                android:ems="10"
                android:id="@+id/t2_et_data" />
        </TableRow>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:text="@string/t2_text_tv_tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t2_spinner"
                android:entries="@array/tipo_de_divida_array"
                android:spinnerMode="dialog"/>
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:text="@string/t2_text_tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />
        </GridLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/t2_rg_status">

            <RadioButton
                android:text="@string/t2_text_rb_pago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t2_rb_sim"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/t2_text_rb_nao_pago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t2_rb_nao"
                android:layout_weight="1" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:text="@string/t2_text_btn_salvar"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:id="@+id/t2_btn_salvar" />

            <Button
                android:text="@string/t2_text_btn_cancelar"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:id="@+id/t2_btn_cancelar"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/t2_btn_salvar" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
